--- a/index.html
+++ b/index.html
@@ -21,12 +21,16 @@
         [v-cloak] {
             display: none;
         }
+        input {
+            margin: 10px;
+            display: block;
+        }
     </style>
 </head>
 <body>
 <div id="app" v-cloak> <!--"v-cloak - в сочетании со стилем display: none
                                 позволяет скрывать объект до компиляции" -->
-    {{ greeting }}
+    <login-form />
     <input @keyup.enter="greet" v-model="greeting" />
 
     <hr />
@@ -51,6 +55,27 @@
             },
             greet() {
                 console.log(this.greeting);
+            }
+        }
+    })
+    app.component('login-form', {
+        template: `
+            <form @submit.prevent="handleSubmit">
+                <h1>{{ title }}</h1>
+                <input type="e-mail" />
+                <input type="password" />
+                <button type="submit">Submit</button>
+            </form>
+        `,
+        data() {
+            return {
+                title: 'Login Form'
+            }
+        },
+        methods: {
+            handleSubmit() {
+                //e.preventDefault(); Способ перехватывать системные события (в параметрах функции обязательно указывать приходящее событие)
+                console.log("submitted");
             }
         }
     })
