--- a/index.html
+++ b/index.html
@@ -62,22 +62,38 @@
         template: `
             <form @submit.prevent="handleSubmit">
                 <h1>{{ title }}</h1>
-                <input type="e-mail" />
-                <input type="password" />
-                <button type="submit">Submit</button>
+                <custom-input type="email" v-bind:label="emailLabel"/>
+                <custom-input type="password" v-bind:label="passwordLabel"/>
+                <button type="submit">Login</button>
             </form>
         `,
+        components: ['custom-input'],
         data() {
             return {
-                title: 'Login Form'
+                title: 'Login Form',
+                email: '',
+                password: '',
+                emailLabel: 'Email',
+                passwordLabel: 'Password'
             }
         },
         methods: {
             handleSubmit() {
                 //e.preventDefault(); Способ перехватывать системные события (в параметрах функции обязательно указывать приходящее событие)
-                console.log("submitted");
+                console.log("submitted", this.email, this.password);
             }
         }
+    })
+    app.component('custom-input', {
+        template: `
+            <label>
+                {{ label }}
+                <input type="text" />
+            </label>
+        `,
+        props: [
+            'label'
+        ]
     })
     app.mount('#app')
 </script>
